--- a/About.html
+++ b/About.html
@@ -24,8 +24,9 @@
                 Conheci pessoas maravilhosas, e me diverti na mesma intensidade que eu trabalhei.<br>
                 Atualmente estou desempregada, me dedicando aos estudos.</p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/Raquel.jpg" alt="foto da Raquel">
-
+        <section class="imagem">
+        <img class="apresentacao__imagem__sobremim" src="./assets/Raquel.jpg" alt="foto da Raquel">
+        </section>
     </main>
 
     <footer class="rodape">
